--- a/src/views/partials/index.hbs
+++ b/src/views/partials/index.hbs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm mb-3">
             <h1>
-                Has llegado a tu <span class="badge badge-secondary"><i class="fas fa-theater-masks"></i>Anecdotario</span> 
+                Has llegado a tu <span class="badge badge-secondary"><i class="fas fa-theater-masks"></i>Anecdotario.org</span> 
             </h1>
             
         </div>
