--- a/src/views/partials/index.hbs
+++ b/src/views/partials/index.hbs
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm mb-3">
+        <div class="col-sm mb-3 text-center">
             <h1>
-                Has llegado a tu <span class="badge badge-secondary"><i class="fas fa-theater-masks"></i>Anecdotario.org</span> 
+                Has llegado a tu <span class="badge badge-secondary"><i class="fas fa-theater-masks"></i>Anecdotario</span> 
             </h1>
             
         </div>
@@ -49,7 +49,7 @@
     </div>
     <div class="row mt-5">
         <div class="jumbotron bg-dark text-light btn-block">
-            <h1 class="display-4">¿Anecdotario, cómo se come?</h1>
+            <h2 class="display-5">¿Anecdotario, cómo se come?</h2>
             <p class="lead">Anecdotario es un sitio web pensado para compartir las mejores experiencias de tu vida, aquí tendrás un público anónimo. Tienes permitido leer las anécdotas de otros usuarios.</p>
             <hr class="my-4 bg-light">
             <p>Sí deseas empezar a usar nuestro servicio gratuito, haz clic en el botón de abajo.</p>
@@ -57,25 +57,25 @@
         </div>
     </div>
     <div class="row d-block">
-        <h1 class="text-left my-5">¿Cómo funciona?</h1>
+        <h2 class="text-left my-4">¿Cómo funciona?</h2>
         <div class="card">
             <div class="card-body">
-                <h2>
+                <h4>
                     <strong>No todo es como parece...</strong><br>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quia alias praesentium accusamus sit iste illo rerum vero
                     veniam possimus at voluptatibus, quibusdam neque laborum eligendi enim, aspernatur nulla consectetur.
-                </h2>
+                </h4>
             </div>
         </div>
-        <h1 class="text-right my-5">¿Quienes pueden ver mis anécdotas?</h1>
+        <h2 class="text-right my-4">¿Quienes pueden ver mis anécdotas?</h2>
         <div class="card">
             <div class="card-body">
-                <h2>
+                <h4>
                     <strong>No todo es como parece...</strong><br>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quia alias praesentium accusamus sit iste
                     illo rerum vero
                     veniam possimus at voluptatibus, quibusdam neque laborum eligendi enim, aspernatur nulla consectetur.
-                </h2>
+                </h4>
             </div>
         </div>
     </div>
