--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-md-8 mx-auto">
-        <div class="card p-2">
+    <div class="mx-auto">
+        <div class="card">
             <div class="card-body">
                 <h2>Registro de usuario</h2>
                 <hr>
