Fixed footer problem.

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -29,7 +29,7 @@
 </head>
 <body>
     {{>navigation}}
-    <main class="container p-5">
+    <main class="container principal p-5">
         {{>message}}
         {{>errors}}
         {{{body}}}
