--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -31,13 +31,13 @@
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
         <li class="page-item">
-            <a class="page-link" href="/anecdotas?page=1&limit=12">Más recientes</a>
+            <a class="page-link" href="/anecdotas?page=1&limit=12"><i class="fas fa-chevron-left"></i></a>
         </li>
         <li class="page-item"><a class="page-link" href="/anecdotas?page=1&limit=12">1</a></li>
         <li class="page-item"><a class="page-link" href="/anecdotas?page=2&limit=12">2</a></li>
         <li class="page-item"><a class="page-link" href="/anecdotas?page=3&limit=12">3</a></li>
         <li class="page-item">
-            <a class="page-link" href="/anecdotas?page=4&limit=200">Mas antiguos</a>
+            <a class="page-link" href="/anecdotas?page=4&limit=200"><i class="fas fa-chevron-right"></i></a>
         </li>
     </ul>
 </nav>
