--- a/src/views/notes/reader.hbs
+++ b/src/views/notes/reader.hbs
@@ -16,11 +16,10 @@
 </div>
 
 <div class="row">
-    <div class="card">
+    <div class="card w-100">
             <div class="card-body text-center">
                 <h2>{{note.title}} <a href="/like/{{note._id}}"> <span class="badge badge-secondary"><i class="fas fa-heart"></i> {{note.likes}}</span> </a></h2>
             </div>
-        
         <img src="/user/img/{{note.imageid}}" class="card-img-top" alt="...">
         <div class="card-body">
             
