--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -20,13 +20,13 @@
         {{#if notas}}
         <div class="col-auto d-block">
             
-            <h4 class="text-right"> Anécdotas de {{texto}}</h4>
+            <h4 class="text-right pt-2"> Anécdotas de {{texto}}</h4>
             
         </div>
         {{else}}
         <div class="col-auto d-block">
         
-            <h4 class="text-right"> No encontramos ese Usuario.</h4>
+            <h4 class="text-right pt-2"> No encontramos ese Usuario.</h4>
         
         </div>
         {{/if}}
