--- a/src/views/notes/reader.hbs
+++ b/src/views/notes/reader.hbs
@@ -15,10 +15,44 @@
     </div>
 </div>
 
+<div class="card text-white text-center bg-secondary py-2 w-100 mb-5">
+    <h3>Reacciones a esta anécdota</h3>
+    <div class=" d-flex justify-content-center">
+        <a href="/like/{{note._id}}">
+            <button type="button" class="btn btn-secondary mx-1 rounded">
+                <h1><i class="fas fa-smile-wink"></i></h1>{{likes}}
+            </button>
+        </a>
+        
+        <a href="/angry/{{note._id}}">
+            <button type="button" class="btn btn-secondary mx-1 rounded">
+                <h1><i class="fas fa-angry"></i></h1>{{angries}}
+            </button>
+        </a>
+
+        <a href="/funny/{{note._id}}">
+            <button type="button" class="btn btn-secondary mx-1 rounded">
+                <h1><i class="fas fa-grin-squint"></i></h1>{{funnies}}
+            </button>
+        </a>
+
+        <a href="/sad/{{note._id}}">
+            <button type="button" class="btn btn-secondary mx-1 rounded">
+                <h1><i class="fas fa-sad-tear"></i></h1>{{sadness}}
+            </button>
+        </a>
+
+        <a href="/love/{{note._id}}">
+            <button type="button" class="btn btn-secondary mx-1 rounded">
+                <h1><i class="fas fa-grin-hearts"></i></h1>{{lovely}}
+            </button>
+        </a>
+    </div>
+</div>
 <div class="row">
     <div class="card w-100">
             <div class="card-body text-center">
-                <h2>{{note.title}} <a href="/like/{{note._id}}"> <span class="badge badge-secondary"><i class="fas fa-heart"></i> {{note.likes}}</span> </a></h2>
+                <h2>{{note.title}}</a></h2>
             </div>
         <img src="/user/img/{{note.imageid}}" class="card-img-top" alt="...">
         <div class="card-body">
