all-notes pagination min-height adjusted.

--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -34,7 +34,7 @@
     </div>
 </form>
 <hr>
-<div class="card-columns w-100">
+<div class="card-columns w-100" style="min-height:75vh;">
     {{#each notas}}
     <a href="/anecdotas/{{_id}}" class="anec">
         <div class="card">
