--- a/src/views/notes/reader.hbs
+++ b/src/views/notes/reader.hbs
@@ -85,31 +85,32 @@
             
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel"><i class="fas fa-exclamation-triangle"></i> Reporte</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <h5>Muchas gracias por tú cooperación.</h5>
-                            <hr>
-                            <form>
-                                <div class="form-group">
-                                    <label for="message-text" class="col-form-label">Motivo del reporte:</label>
-                                    <textarea class="form-control" id="message-text"></textarea>
-                                </div>
-                            </form>
-                            El reporte será investigado lo más pronto posible.
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                            <button type="button" class="btn btn-warning">Enviar reporte</button>
+                <form action="/report/{{note._id}}" spellcheck="false" method="POST">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel"><i class="fas fa-exclamation-triangle"></i> Reporte</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <h5>Muchas gracias por tú cooperación.</h5>
+                                <hr>
+                                    <div class="form-group">
+                                        <label for="message-text" class="col-form-label">Motivo del reporte:</label>
+                                        <textarea class="form-control" name="msn"></textarea>
+                                    </div>
+                                
+                                El reporte será investigado lo más pronto posible.
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                                <button type="submit" class="btn btn-warning">Enviar reporte</button>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
