--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -3,7 +3,8 @@
         <div class="card p-2">
             <div class="card-body">
                 <h2>Iniciar sesión</h2>
-                <img src="/img/cat.png" class="w-50 d-block m-auto" alt="cat">
+                <img src="/img/anc.png" class="w-50 d-block m-auto" alt="cat">
+
                 <hr>
                 <form action="/usuario/acceder" spellcheck="false" method="POST">
                     <div class="form-group">
