--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anecdotario</title>
     <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico">
     <!-- BOOTSTRAP 4 | CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/cosmo/bootstrap.min.css">
     <!-- BOOTSTRAP 4 | JS, Popper.js, and jQuery -->
