--- a/src/views/notes/reader.hbs
+++ b/src/views/notes/reader.hbs
@@ -77,7 +77,7 @@
         </div>
         <div class="card-body">
             <h5 class="card-title">Reporte rápido</h5>
-            <p class="card-text">En anécdotario nos aseguramos de mantener el contenido bajo las <a href="#"> normas de uso</a>.</p>
+            <p class="card-text">En anécdotario nos aseguramos de mantener el contenido bajo las <a href="/normas"> normas de uso</a>.</p>
 
             <!-- MODAL -->
             <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal"
@@ -109,6 +109,9 @@
                                 <button type="submit" class="btn btn-warning">Enviar reporte</button>
                             </div>
                         </div>
+                    </div>
+                    <div class="modal-dialog modal-dialog-scrollable">
+                        ...
                     </div>
                 </form>
             </div>
