--- a/src/views/partials/index.hbs
+++ b/src/views/partials/index.hbs
@@ -61,9 +61,10 @@
         <div class="card">
             <div class="card-body">
                 <h4>
-                    <strong>No todo es como parece...</strong><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quia alias praesentium accusamus sit iste illo rerum vero
-                    veniam possimus at voluptatibus, quibusdam neque laborum eligendi enim, aspernatur nulla consectetur.
+                    <strong>Anécdotario es un aplicación que...</strong><br>
+                    Te permite crear una cuenta y compartir experiencias únicas con otros usuarios de manera anónima.
+                    Los usuarios podrán reaccionar a tus anécdotas y buscar todo tu contenido con tan solo tu nombre
+                    de usuario.
                 </h4>
             </div>
         </div>
@@ -71,10 +72,9 @@
         <div class="card">
             <div class="card-body">
                 <h4>
-                    <strong>No todo es como parece...</strong><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quia alias praesentium accusamus sit iste
-                    illo rerum vero
-                    veniam possimus at voluptatibus, quibusdam neque laborum eligendi enim, aspernatur nulla consectetur.
+                    <strong>Absolutamente cualquier persona...</strong><br>
+                    Por este motivo te recomendamos no compartir información privada ni contenido délicado.<br>
+                    ¡Todo esto es de manera anónima así que no temas compartir tus experiencias!
                 </h4>
             </div>
         </div>
