--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="/"><img src="/img/anc.png" width="65px" alt="logo">Anecdotario</a>
+        <a class="navbar-brand" href="/"><img src="/img/anc.png" width="60px" alt="logo">Anecdotario</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -13,6 +13,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/anecdotas?page=1&limit=12"><i class="fab fa-leanpub"></i>   Descubrir</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/normas#contacto"><i class="fas fa-address-card"></i> Contácto</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
